crates/ink/tests/ui/trait_def/fail/definition_assoc_type.stderr
error: associated types in ink! trait definitions are not supported, yet
 --> tests/ui/trait_def/fail/definition_assoc_type.rs:3:5
  |
3 |     type Type;
  |     ^^^^^^^^^^
